@@ -310,6 +310,7 @@ force login after device id reset
 fix multiple Emby server instances on reconnection to same server
 fix artist sync issue
 add additional safty for delete files on Kodi events
+fix remove library on Emby server
 
 
 6.0.13 (beta)
